--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="http://143.110.154.185:4000/upload/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phiona App</title>
+    <title>Fhyona App</title>
 </head>
 
 <body>
-    <div id="root"></div>
+    <div style="font-family: 'Roboto';" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
 
