--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="http://143.110.154.185:4000/upload/favicon.png" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto&subset=latin,greek,greek-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto&subset=latin,greek,greek-ext,latin-ext,cyrillic'
+        rel='stylesheet' type='text/css'>
+    <meta name="keywords"
+        content="Decorral,Tienda de alimentos orgánicos, gallina de corral, corrales, pollos, pato, res,Orgánico, feria orgánica, huevo orgánico, huevos orgánicos, productos orgánicos, gallina, pollo, pavo, feria, Miraflores, huevos orgánicos en Miraflores, venta de huevos en Miraflores, Venta de pollo orgánico, pollo orgánico, gallina orgánica, venta de huevos orgánicos en Miraflores" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fhyona App</title>
 </head>
