--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords"
         content="Decorral,Tienda de alimentos orgánicos, gallina de corral, corrales, pollos, pato, res,Orgánico, feria orgánica, huevo orgánico, huevos orgánicos, productos orgánicos, gallina, pollo, pavo, feria, Miraflores, huevos orgánicos en Miraflores, venta de huevos en Miraflores, Venta de pollo orgánico, pollo orgánico, gallina orgánica, venta de huevos orgánicos en Miraflores" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallinita de Corral - Fhyona App</title>
+    <title>Fhyona App</title>
 </head>
 
 <body>
